--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
-{
+/*{
   "rewrites": [
     {
       "source": "/:path*",
       "destination": "/index.html"
     }
   ]
+}*/
+
+{
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
